--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "joi": "^17.4.0",
+    "mongodb": "^3.6.7",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7"
   }
