--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "nodemon": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.7",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7"
